<resources>
    <string name="app_name">GOVApp</string>
    <string name="welcome">Welcome</string>
    <string name="welcomemsg">Welcome to find your dream maid!</string>
    <string name="Signmsg">Continue to Sign In</string>
    <string name="accountmsg">Already have an account?</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="RegisterCap">REGISTER</string>
    <string name="LoginCap">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
</resources>