<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdate"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/loginEmailText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text"
        android:ems="10"
        android:hint="@string/Email"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

    <EditText
        android:id="@+id/loginEmailText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="@string/Password"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText2" />

    <EditText
        android:id="@+id/loginEmailText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Confirm Password"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText3" />

    <EditText
        android:id="@+id/loginEmailText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Region"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText4" />

    <EditText
        android:id="@+id/loginEmailText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_text"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Phone Number"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText5" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Male"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText6" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="124dp"
        android:text="Female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText6" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="229dp"
        android:layout_height="104dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_no_back" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/round_button"
        android:text="Add picture"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="247dp"
        android:layout_height="47dp"
        android:background="@drawable/round_button"
        android:text="UPDATE/ ADD"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>